tests/negative/test_block_passing_no_pass.orb
fnc main () () {
    block i32 {
        sym (x 0);
    };
};